# SpaceGame

./: CMakeLists.txt
cmake/: canvas.cmake  junctions.cmake  nucleus.cmake  sfml.cmake
res/models/: command_center_01.model
src/: camera.cpp  camera.h  component.cpp  component.h  main.cpp  universe.cpp  universe.h
src/entities/: entity.cpp  entity.h
src/game/: resource_manager.cpp  resource_manager.h  ui_context.cpp  ui_context.h
src/game_states/: game_state.cpp  game_state.h  game_state_universe.cpp  game_state_universe.h
src/models/: model_data.h
src/particles/: particle.cpp  particle.h  particle_emitter.cpp  particle_emitter.h
src/resources/: resource_loader.h  resource_store.h  sfml_loaders.h
src/ui/: color_view.cpp  color_view.h  context.cpp  context.h  context_view.cpp  context_view.h  group_view.cpp  group_view.h  linear_sizer_view.cpp  linear_sizer_view.h  stacked_sizer_view.cpp  stacked_sizer_view.h  view.cpp  view.h
src/ui/views/: button.cpp  button.h  color_view.cpp  color_view.h  context_view.cpp  context_view.h  group_view.cpp  group_view.h  linear_sizer_view.cpp  linear_sizer_view.h  stacked_sizer_view.cpp  stacked_sizer_view.h  text_view.cpp  text_view.h  view.cpp  view.h
src/universe/: camera.cpp  camera.h  hud.cpp  hud.h  link.cpp  link.h  observers.cpp  observers.h  universe.cpp  universe.h  universe_view.cpp  universe_view.h
src/universe/components/: render_component.cpp  render_component.h
src/universe/objects/: asteroid.cpp  asteroid.h  command_center.cpp  command_center.h  destructible_object.cpp  destructible_object.h  miner.cpp  miner.h  object.cpp  object.h  power_generator.cpp  power_generator.h
src/universe/objects/projectiles/: bullet.cpp  bullet.h  missile.cpp  missile.h  projectile.cpp  projectile.h
src/universe/objects/structures/: command_center.cpp  command_center.h  miner.cpp  miner.h  power_generator.cpp  power_generator.h  power_relay.cpp  power_relay.h  structure.cpp  structure.h  turret.cpp  turret.h
src/universe/objects/units/: enemy_ship.cpp  enemy_ship.h  unit.cpp  unit.h
src/utils/: component.cpp  component.h  math.cpp  math.h  stream_operators.cpp  stream_operators.h
tools/model_convert/: model_convert.cpp  parser.cpp  parser.h
